documents/examples/good/small/09-13-binding.latf
int x = 128;
int y = 256;

void fun(int x) {
    println(x); // 42
    println(y); // 256

    if (x != 128) {
        int y = 512;
        println(y); // 512
    }

    println(y); // 256
}

int main() {
    println(x); // 128
    fun(42);

    return 0;
}