documents/examples/bad/syntax_error_if2.latf
int main() {
    if (x > 0)        
        return 0;
    return 0;
}